--- a/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
+++ b/src/Mapbender/WmsBundle/Resources/translations/messages.de.xlf
@@ -22,10 +22,10 @@
         <source>mb.wms.wmsloader.error.load</source>
         <target>WMSLadener: die WMS-Capabilities konnten nicht geladen werden!</target>
       </trans-unit>
-      <trans-unit id="49d1d8cb561adb5e72a3bc42b920be3e" resname="mb.wms.wmsloader.dialog.label.title">
+      <!--trans-unit id="49d1d8cb561adb5e72a3bc42b920be3e" resname="mb.wms.wmsloader.dialog.label.title">
         <source>mb.wms.wmsloader.dialog.label.title</source>
         <target>WMS laden</target>
-      </trans-unit>
+      </trans-unit-->
       <trans-unit id="e0fad091f39559379dc4574bb9d41485" resname="mb.wms.wmsloader.dialog.btn.cancel">
         <source>mb.wms.wmsloader.dialog.btn.cancel</source>
         <target>Abbrechen</target>
